--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,3 +39,8 @@ jobs:
     - name: Run model tests
       run: |
         pytest day5/演習3/tests/test_model.py -v
+      
+    - name: Check model accuracy
+      run: |
+        python day5/演習2/evaluate.py
+
